# Barabas-Client

./: CMakeLists.txt  README.md  be.ac.ua.comp.Barabas.gschema.xml  be.ac.ua.comp.Barabas.service.in  compile-schemas.cmake  generate-users.sh
cmake/vala/: FindVala.cmake
lib/: connection.vala  connection_status.vala  database.vala  unsaved_changes_crawler.vala
lib/barabas-protocol/: icommand.vala  new_file_command.vala  new_tag_command.vala  remove_tag_command.vala  request_download_command.vala  version_commit_command.vala  version_request_command.vala
lib/barabas-protocol/internal/: download_log_command.vala  handshake_command.vala  user_password_login_command.vala
lib/caches/: cache.vala  local_file_cache.vala  synced_file_cache.vala
lib/objects/: history_log_entry.vala  local_file.vala  synced_file.vala  synced_file_tag.vala  synced_file_version.vala
src/: barabas.vala  file_monitor_client.vala  local_file_resource_manager.vala  resource_manager.vala
src/objects/: aresource.vala  download.vala  local_file.vala  search.vala  synced_file.vala  synced_file_version.vala
